# SAGE---Strategic-Adversarial-Multi-Agent-Code-Engine-

./: Dockerfile  README.md  app (1).py  requirements (1).txt  validate.py
Sage-main/sage-free/: .env.example  Dockerfile.rocm  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements_hf.txt
Sage-main/sage-free/configs/: aode_hyperparams.yaml  vllm_baseline.yaml  vllm_orthogonal.yaml  vllm_redteam.yaml  vllm_synthesizer.yaml
Sage-main/sage-free/demos/: demo_h100_simulation.py
Sage-main/sage-free/docs/: DEPLOYMENT.md
Sage-main/sage-free/scripts/: launch_coresident.py
sage-pro/: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DIAGNOSTIC_REPORT.md  LICENSE  Makefile  README.md  SAGE_AODE_Fix_Prompt.md  SAGE_PROJECT_BRIEF.md  pyproject.toml  requirements-core.txt  temp_docx_text.txt
sage-pro/.github/workflows/: benchmarks.yml  release.yml
sage-pro/Frontend/: README.md
sage-pro/configs/: tool_definitions.json  tools.yaml  torsion_penalties.yaml  vllm_redteam.yaml  vllm_synthesizer.yaml
sage-pro/demo_output/: BENCHMARKS.md  lru_async.py  test_lru_async.py
sage-pro/demos/: demo_h100_simulation.py  demo_sage_code.py  demo_sage_pro.py
sage-pro/docs/: ARCHITECTURE.md  DEPLOYMENT.md  HACKATHON_PITCH.md  SAGE_PRO_v3_MATHEMATICAL_SPEC.md
sage-pro/docs/figures/: oom_contrast.gif.placeholder
sage-pro/sage/agents/: __init__.py  architect.py
sage-pro/sage/api/: auth_routes.py  chat_routes.py  server.py  stream_endpoint.py
sage-pro/sage/auth/: google_oauth.py  session_manager.py
sage-pro/sage/benchmarks/: livecodebench.py
sage-pro/sage/core/: adversarial_perturber.py  chaos_curriculum.py  chaos_dreamer.py  correction_detector.py  graph.py  live_renderer.py  reward_crystallizer.py  skill_distiller.py  time_travel.py  udrk_kernel.py
sage-pro/sage/db/: __init__.py
sage-pro/sage/prompts/: architect.md  orchestrator.md  (+1 more)
sage-pro/scripts/: download_models.sh  launch_coresident.py  quantize_awq.py  record_oom_contrast.sh  run_benchmarks.sh
(+112 files in other folders)
