[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sage-pro"
version = "0.1.0"
authors = [
  { name = "SAGE-CODE Contributors" },
]
description = "Production multi-agent coding assistant for AMD MI300X"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "vllm==0.6.3",
    "langgraph==0.2.34",
    "langchain-core==0.3.15",
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "faiss-cpu==1.9.0",
    "gudhi==3.10.1",
    "sentence-transformers==3.2.0",
    "structlog==24.4.0",
    "pydantic==2.9.2",
    "httpx==0.27.2",
    "hypothesis==6.115.0",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "ruff==0.7.0",
    "mypy==1.12.0",
    "bandit==1.7.10",
    "semgrep==1.90.0",
    "radon==6.0.1",
    "pyperf==2.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "demos/"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov=sage --cov-report=term-missing --cov-fail-under=85 -v"
testpaths = ["sage/tests"]
asyncio_mode = "auto"
